# giulia-ai

./: .gitignore  LICENSE  README.md  chatbot.py  main.py  pyproject.toml
prompts/core/: giulia_assistant.txt
prompts/system_prompts/: giulia_assistant.txt
prompts/templates/: boss_template.txt
utils/: history_manager.py  prompt_loader.py
utils/ai/: history_manager.py  model_interface.py  model_provider.py
